plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.16'
    id 'io.spring.dependency-management' version '1.1.7'
}

ext {
    springBootVersion = "3.5.16"
    guavaVersion = '33.4.0-jre'
    mybatisPlusVersion = "3.5.17"
    druidVersion = "1.2.28"
    okhttpVersion = "4.12.0"
    jjwtVersion = "0.12.6"
    commonsCollections4Version = "4.4"
    aliOssVersion = "3.18.5"
    tencentSdkVersion = "3.1.1432"
    easypoiVersion = "4.5.0"
    tinyPinyinVersion = "2.0.3.RELEASE"
    dysmsapiVersion = "2.0.1"
    openapiutilVersion = "0.1.5"
    modelMapperVersion = "3.2.1"
    bcryptVersion = '0.10.2'
}

tasks.bootJar {
    enabled = false
}

allprojects {
    group = GROUPID
    version = VERSION

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(17)
        }
    }

    tasks.withType(JavaCompile).configureEach {
        options.encoding = 'UTF-8'
        options.compilerArgs += ['-parameters']
    }

    repositories {
        mavenLocal()
        maven { url 'https://maven.aliyun.com/repository/public' }
        mavenCentral()
    }

    configurations.configureEach {
        exclude group: 'commons-logging', module: 'commons-logging'
        resolutionStrategy.cacheDynamicVersionsFor 10, 'minutes'
        resolutionStrategy.cacheChangingModulesFor 10, 'minutes'
    }
}

subprojects {
    apply plugin: "java-library"
    apply plugin: "io.spring.dependency-management"

    dependencyManagement {
        imports {
            mavenBom "org.springframework.boot:spring-boot-dependencies:$springBootVersion"
        }
        dependencies {
            dependency "com.baomidou:mybatis-plus-spring-boot3-starter:$mybatisPlusVersion"
            dependency "com.baomidou:mybatis-plus-jsqlparser:$mybatisPlusVersion"
            dependency "com.alibaba:druid-spring-boot-3-starter:$druidVersion"
            dependency "com.aliyun.oss:aliyun-sdk-oss:$aliOssVersion"
            dependency "com.tencentcloudapi:tencentcloud-sdk-java:$tencentSdkVersion"
            dependency "cn.afterturn:easypoi-base:$easypoiVersion"
            dependency "cn.afterturn:easypoi-web:$easypoiVersion"
            dependency "cn.afterturn:easypoi-annotation:$easypoiVersion"
            dependency "io.github.biezhi:TinyPinyin:$tinyPinyinVersion"
            dependency "com.aliyun:dysmsapi20170525:$dysmsapiVersion"
            dependency "com.aliyun:openapiutil:$openapiutilVersion"
            dependency "org.modelmapper:modelmapper:$modelMapperVersion"
            dependency "com.google.guava:guava:$guavaVersion"
            dependency "com.squareup.okhttp3:okhttp:$okhttpVersion"
            dependency "org.apache.commons:commons-collections4:$commonsCollections4Version"
            dependency "io.jsonwebtoken:jjwt-api:$jjwtVersion"
            dependency "io.jsonwebtoken:jjwt-impl:$jjwtVersion"
            dependency "io.jsonwebtoken:jjwt-jackson:$jjwtVersion"
            dependency "at.favre.lib:bcrypt:$bcryptVersion"
        }
    }

    dependencies {
        compileOnly 'org.projectlombok:lombok'
        annotationProcessor 'org.projectlombok:lombok'
        testImplementation 'org.springframework.boot:spring-boot-starter-test'
    }

    sourceSets {
        main {
            resources {
                srcDirs = ["src/main/resources", "src/main/java"]
                exclude '**/*.java'
            }
        }
    }
}
